--- a/form.html
+++ b/form.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
+    <script>
+
+        function validar() {
+            let nome = document.getElementById("nome").value;
+
+            if (nome == "")
+            return("Insira seu nome")
+        }
+
+    </script>
     <link rel="stylesheet" href="form.css">
 </head>
 <body>
